# url_shortener

./: .env.example  Dockerfile  docker-compose.yaml  locustfile.py  pyproject.toml
backend/: Dockerfile
backend/alembic/: env.py
backend/src/: main.py
backend/src/core/: celery_config.py  config.py  exceptions.py  utils.py
backend/src/database/: engine.py
backend/src/database/redis/: redis.py
backend/src/urls/domain/: entities.py
backend/src/urls/infrastructure/: dependencies.py  tasks.py
backend/src/urls/infrastructure/database/: caching_repository.py  orm.py  repository.py
backend/src/urls/presentation/: dtos.py
backend/src/urls/presentation/api/: routes.py
backend/src/urls/services/: short_url_service.py
backend/src/urls/services/interfaces/: short_url_repository.py
backend/src/users/domain/: entites.py
backend/src/users/infrastructure/database/: orm.py  repository.py
backend/src/users/services/interfaces/: user_repository.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
